# mirae-tts

./: Dockerfile  README.md  renovate.json
.github/workflows/: ci.yml  review.yml
mirae-tts-cli/src/: main.rs
mirae-tts-engine/: Cargo.toml
mirae-tts-engine/src/: colligation.rs  english.rs  g2p.rs  kps_class.rs  lib.rs  phoneme.rs  synthesizer.rs
mirae-tts-server/: Cargo.toml
mirae-tts-server/src/: main.rs
