[package]
name = "mirae-tts-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
mirae-tts-engine = { path = "../mirae-tts-engine" }
hound = "3.5.1"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors"] }
tokio-stream = "0.1.18"
bytes = "1.11.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
